--- a/postgresql/docker-compose.yml
+++ b/postgresql/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   postgres:
-    image: Dockerfile
+    image: .
     container_name: my-postgres-container
     environment:
       POSTGRES_USER: myuser
